--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ models/goturn/goturn.caffemodel
 models/yolov8x.pt
 *.pyc
 __pycache__/
+MIA-VSR/experiments/pretrained_models/MIAVSR_REDS_x4.pth
+MIA-VSR/experiments/pretrained_models/MIAVSR_Vid4_x4.pth
